[TROPIC-60] Fix filter by brand

--- a/templates/Front/Content/Category/categoryList.html.twig
+++ b/templates/Front/Content/Category/categoryList.html.twig
@@ -45,7 +45,7 @@
                     {% set categoryUrl = url('front_product_list', { id: category.id }) %}
                 {% endif %}
                 {% if brand is defined %}
-                    {% set categoryUrl = categoryUrl ~ '?vyrobce=' ~ brand.name|lower %}
+                    {% set categoryUrl = categoryUrl ~ '?vyrobce=' ~ brand.slug %}
                 {% endif %}
                 <li class="list-categories__item">
                     <a href="{{ categoryUrl }}" class="list-categories__item__link">
