--- a/templates/Front/Content/Product/luigisBoxSearchResultsTemplates.html.twig
+++ b/templates/Front/Content/Product/luigisBoxSearchResultsTemplates.html.twig
@@ -68,9 +68,6 @@
                                 {{ '{{ attributes.standard_discount_percent[0] }}' ~ '% ' ~ 'sleva'|trans }}
                             </span>
                         {% endif %}
-                        <span v-if="attributes.variant_count > 0" class="in-flag__item" style="background-color: {{ constant('App\\Model\\Product\\Flag\\Flag::VARIANTS_FLAG_COLOR') }}">
-                            {{ '{{ attributes.standard_discount_percent[0] }}' ~ '% ' ~ 'sleva'|trans }}
-                        </span>
                     </div>
                 </a>
 
@@ -118,9 +115,12 @@
                     </div>
 
                     <div class="list-products__item__hover">
+                        <a v-bind:href="url" class="in-add-to-cart-variant btn btn--big btn--success" v-if="attributes.variant_count > 0">
+                            {{ 'Vyberte si variantu'|trans }}
+                        </a>
                         <form method="post" name="add_product_form" novalidate="novalidate" class="js-add-product dont-print"
                               action="{{ url('front_cart_add_product') }}" data-ajax-url="{{ url('front_cart_add_product_ajax') }}"
-                              v-if="attributes.variant_count == 0">
+                              v-else>
                             <input type="hidden" name="add_product_form[productId]" class="input id__add_product_form_productId" v-bind:value="attributes.id">
                             <input type="hidden" name="add_product_form[onlyRefresh]" class="input id__add_product_form_onlyRefresh" value="0" tabindex="0">
                             <div class="in-add-to-cart in-add-to-cart--small">
@@ -139,9 +139,6 @@
                                 <input type="submit" name="add_product_form[add]" value="{{ 'Přidat do košíku'|trans }}" class="in-add-to-cart__button btn-no-style btn" v-bind:data-hard-disabled="!attributes.available" data-action="buy">
                             </div>
                         </form>
-                        <a v-bind:href="url" class="in-add-to-cart-variant btn btn--big btn--success" v-else>
-                            {{ 'Vyberte si variantu'|trans }}
-                        </a>
                     </div>
                 </div>
             </div>
