--- a/templates/Front/Content/Order/transportAndPaymentBox.html.twig
+++ b/templates/Front/Content/Order/transportAndPaymentBox.html.twig
@@ -14,7 +14,7 @@
             {% for child in form.transport %}
                 {% set choice = form.transport.vars.choices[child.vars.name] %}
                 {% set transportPrice = transportsPrices[choice.data.id] %}
-                <label class="box-chooser__item js-order-transport{% if loop.index > 3 %} js-additional-transport display-none{% endif %}">
+                <label class="box-chooser__item js-order-transport">
                     <span class="box-chooser__item__check">
                         {{ form_widget(child, { attr: {
                             class: 'css-radio js-order-transport-input',
@@ -73,15 +73,6 @@
                 {% do form.transport.setRendered %}
                 {{ 'Nothing to choose from'|trans }}
             {% endfor %}
-            {% if form.transport|length > 3 %}
-                <div class="box-chooser__more js-toggle-additional-transports">
-                    <p class="box-chooser__more__text">
-                        <span class="box-chooser__more__text__show">{{ 'Zobrazit další způsoby dopravy'|trans }}</span>
-                        <span class="box-chooser__more__text__hide">{{ 'Skrýt další způsoby dopravy'|trans }}</span>
-                    </p>
-                    <i class="svg svg-triangle"></i>
-                </div>
-            {% endif %}
         </div>
     </div>
 </div>
@@ -105,7 +96,7 @@
                 {% if isGoPayBankTransfer %}
                     {% set bankTransferRendered = true %}
                 {% endif %}
-                <label class="box-chooser__item{% if loop.index > 3 %} js-additional-payment display-none{% endif %}">
+                <label class="box-chooser__item">
                     <span class="box-chooser__item__check">
                         {{ form_widget(child, { attr: { class: 'css-radio js-order-payment-input' ~ (isGoPayBankTransfer ? ' js-gopay-bank-transfer-input' : ''), 'data-id': choice.data.id} }) }}
                         <span class="css-radio__image"></span>
@@ -155,15 +146,6 @@
                 {% do form.payment.setRendered %}
                 {{ 'Nothing to choose from'|trans }}
             {% endfor %}
-            {% if form.payment|length > 3 %}
-                <div class="box-chooser__more js-toggle-additional-payments">
-                    <p class="box-chooser__more__text">
-                        <span class="box-chooser__more__text__show">{{ 'Zobrazit další způsoby platby'|trans }}</span>
-                        <span class="box-chooser__more__text__hide">{{ 'Skrýt další způsoby platby'|trans }}</span>
-                    </p>
-                    <i class="svg svg-triangle"></i>
-                </div>
-            {% endif %}
             {% if not bankTransferRendered %}
                 {% do goPayBankSwiftForm.setRendered %}
             {% endif %}
