Added IDs to search results and additional URL to the data exported to Luigi's Box

--- a/templates/Front/Content/Product/detail.html.twig
+++ b/templates/Front/Content/Product/detail.html.twig
@@ -11,6 +11,10 @@
     {% endif %}
 {% endblock %}
 
+{% block meta_luigis_box %}
+    <meta property="lb:id" content="{{ product.catnum }}">
+{% endblock %}
+
 {% block meta_description %}
     {{- product.getSeoMetaDescription(domain.id)|default(getSeoMetaDescription()) -}}
 {% endblock %}
