--- a/templates/Front/Content/Product/listByBrand.html.twig
+++ b/templates/Front/Content/Product/listByBrand.html.twig
@@ -7,8 +7,13 @@
 {% block meta_robots %}
     {{ paginator.metaRobots(paginationResult) }}
 {% endblock %}
+
 {% block meta_rel_links %}
     {{ paginator.relLinks(paginationResult) }}
+{% endblock %}
+
+{% block meta_luigis_box %}
+    <meta property="lb:id" content="{{ brand.id }}">
 {% endblock %}
 
 {% block title %}
