Added Ecomail tracking script

--- a/templates/Front/Layout/base.html.twig
+++ b/templates/Front/Layout/base.html.twig
@@ -55,6 +55,7 @@
         {{ render(controller('App\\Controller\\Front\\GtmController:bodyAction')) }}
         {{ render(controller('App\\Controller\\Front\\ScriptController:embedAllPagesScriptsAction')) }}
         {{ render(controller('App\\Controller\\Front\\ScriptController:embedAllPagesGoogleAnalyticsScriptAction')) }}
+        {{ render(controller('App\\Controller\\Front\\ScriptController:embedAllPagesEcomailScriptAction')) }}
 
         {% block html_body %}{% endblock %}
 
