change variantId to productId

--- a/templates/Front/Inline/Cart/addProduct.html.twig
+++ b/templates/Front/Inline/Cart/addProduct.html.twig
@@ -60,7 +60,7 @@
                     </div>
                 </div>
 
-                {% if product.variantId in [189603, 189604, 189605, 189606, 189608, 189607] %}
+                {% if product.id in [189603, 189604, 189605, 189606, 189608, 189607] %}
                     <div class="box-detail-add__buttons__item btn btn--large js-preorder-modal" data-product-name="{{ product.name }}" data-product-availability="{{ product.id }}">
                         {{ 'Předobjednat'|trans }}
                     </div>
