style the preorder button, get availability for variants, add phone and name inputs

--- a/assets/styles/frontend/common/components/box/detail-add.less
+++ b/assets/styles/frontend/common/components/box/detail-add.less
@@ -49,6 +49,7 @@
         @media @query-md {
             margin-bottom: @box-detial-add-item-gap;
             margin-left: -@box-detial-add-item-gap;
+            row-gap: @box-detial-add-item-gap;
         }
 
         &--detail-variant {
