--- a/templates/Front/Inline/Cart/addProduct.html.twig
+++ b/templates/Front/Inline/Cart/addProduct.html.twig
@@ -60,7 +60,7 @@
                     </div>
                 </div>
 
-                {% if product.id in [189603, 189604, 189605, 189606, 189608, 189607] %}
+                {% if 719 in categoryIds %}
                     <div class="box-detail-add__buttons__item btn js-preorder-modal" data-lang="{{ app.request.locale }}" data-product-name="{{ product.name }}" data-product-type="variable">
                         {{ 'Předobjednat'|trans }}
                     </div>
@@ -85,8 +85,8 @@
                     </div>
                 {% endif %}
                 
-                {% if product.id in [188420] %}
-                    <div class="box-detail-add__buttons__item btn btn--large js-preorder-modal" data-lang="{{ app.request.locale }}" data-product-name="{{ product.name }}" data-product-type="simple">
+                {% if 719 in categoryIds %}
+                    <div class="box-detail-add__buttons__item btn js-preorder-modal" data-lang="{{ app.request.locale }}" data-product-name="{{ product.name }}" data-product-type="variable">
                         {{ 'Předobjednat'|trans }}
                     </div>
                 {% endif %}
