fix simple availability text, fix SK typos

--- a/templates/Front/Inline/Cart/addProduct.html.twig
+++ b/templates/Front/Inline/Cart/addProduct.html.twig
@@ -86,7 +86,7 @@
                 {% endif %}
                 
                 {% if 719 in categoryIds %}
-                    <div class="box-detail-add__buttons__item btn js-preorder-modal" data-lang="{{ app.request.locale }}" data-product-name="{{ product.name }}" data-product-type="variable">
+                    <div class="box-detail-add__buttons__item btn js-preorder-modal" data-lang="{{ app.request.locale }}" data-product-name="{{ product.name }}" data-product-type="simple">
                         {{ 'Předobjednat'|trans }}
                     </div>
                 {% endif %}
